--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Página Home</h1>
+    <h2>H2 fica esse fonte</h2>
     <a href="paginaTeste.html">ir para a pagina 2</a>
 </body>
 </html>
