Modificated a info about the website

--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 <body>
     <h1>Página Home</h1>
     <h2>H2 fica esse fonte</h2>
-    <a href="paginaTeste.html">ir para a pagina 2</a>
+    <a href="paginaTeste.html">ir para a pagina teste 1</a>
 </body>
 </html>
